--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Navigation bar with links to different sections/pages -->
     <nav>
         <a href="#">Home</a>
-        <a href="#">About</a>
+        <a href="test.html">About</a>
         <a href="#">Services</a>
         <a href="#">Portfolio</a>
         <a href="#">Contact</a>
