--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="logo"><a href="#">KB Nexus</a></div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="test.html">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
