--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logo"><a href="#">KB Nexus</a></div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="test.html">About</a></li>
+                <li><a href="personal.html">Personal</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
