--- a/personal.html
+++ b/personal.html
@@ -34,14 +34,14 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // 🔹 Firebase Configuration (Replace with your actual values)
+        // 🔹 Firebase Configuration 
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "your-project-id.firebaseapp.com",
-            projectId: "your-project-id",
-            storageBucket: "your-project-id.appspot.com",
-            messagingSenderId: "YOUR_SENDER_ID",
-            appId: "YOUR_APP_ID"
+          apiKey: "AIzaSyBADuf9znyprVCwOmn1vocjIiOsnrIkekc",
+          authDomain: "kalebebeksite.firebaseapp.com",
+          projectId: "kalebebeksite",
+          storageBucket: "kalebebeksite.firebasestorage.app",
+          messagingSenderId: "645799759143",
+          appId: "1:645799759143:web:6f6b679b03c9619271ed02"
         };
 
         // 🔹 Initialize Firebase
@@ -50,8 +50,8 @@
 
         // 🔹 Approved Users List
         const approvedEmails = [
-            "your-email@example.com",
-            "family-member@example.com"
+            "kalebebek@gmail.com",
+            "brinteyfox99@gmail.com"
         ];
 
         // 🔹 Function to update UI based on auth state
