--- a/personal.html
+++ b/personal.html
@@ -16,7 +16,6 @@
     <!-- Login Form -->
     <div id="login-form">
         <h2>Login</h2>
-        <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="password" placeholder="Password" required>
         <button onclick="login()">Login</button>
     </div>
@@ -34,7 +33,8 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        // 🔹 Firebase Configuration 
+        // 🔹 Firebase Configuration (Replace with your actual values)
+        // Your web app's Firebase configuration
         const firebaseConfig = {
           apiKey: "AIzaSyBADuf9znyprVCwOmn1vocjIiOsnrIkekc",
           authDomain: "kalebebeksite.firebaseapp.com",
@@ -48,16 +48,10 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
 
-        // 🔹 Approved Users List
-        const approvedEmails = [
-            "kalebebek@gmail.com",
-            "brinteyfox99@gmail.com"
-        ];
-
         // 🔹 Function to update UI based on auth state
         function updateUI(user) {
-            if (user && approvedEmails.includes(user.email)) {
-                // ✅ User is approved → Show protected content
+            if (user) {
+                // ✅ User is logged in → Show protected content
                 document.getElementById("login-form").style.display = "none";
                 document.getElementById("protected-content").style.display = "block";
                 document.getElementById("logout-btn").style.display = "inline";
@@ -69,34 +63,27 @@
             }
         }
 
-        // 🔹 Login Function (No Reload)
+        // 🔹 Login Function (Password-only login using Firebase)
         window.login = function() {
-            const email = document.getElementById("email").value;
             const password = document.getElementById("password").value;
 
-            signInWithEmailAndPassword(auth, email, password)
+            // 🔐 Attempt to sign in with dummy email and entered password
+            const dummyEmail = "user@domain.com"; // The dummy email we used during signup
+
+            signInWithEmailAndPassword(auth, dummyEmail, password)
                 .then((userCredential) => {
-                    const user = userCredential.user;
-
-                    // ✅ Check if user is approved
-                    if (!approvedEmails.includes(user.email)) {
-                        alert("Access denied: This account is not approved.");
-                        signOut(auth);
-                        return;
-                    }
-
-                    // ✅ Seamless login → Update UI immediately
-                    updateUI(user);
+                    // ✅ Successful login
+                    updateUI(userCredential.user);
                 })
                 .catch((error) => {
-                    alert("Login failed: " + error.message);
+                    alert("Login failed: Incorrect password");
                 });
         };
 
         // 🔹 Logout Function (No Reload)
         window.logout = function() {
             signOut(auth).then(() => {
-                updateUI(null);
+                updateUI(null); // Simply hide the content and show the login form
             });
         };
 
@@ -104,7 +91,6 @@
         onAuthStateChanged(auth, (user) => {
             updateUI(user);
         });
-
     </script>
 </body>
 </html>
