--- a/personal.html
+++ b/personal.html
@@ -91,6 +91,13 @@
         onAuthStateChanged(auth, (user) => {
             updateUI(user);
         });
+
+        // 🔹 Add event listener for Enter key to trigger login
+        document.getElementById("password").addEventListener("keydown", function(event) {
+            if (event.key === "Enter") {
+                login(); // Trigger login if Enter is pressed
+            }
+        });
     </script>
 </body>
 </html>
