--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Welcome to Kale Bebek's Portfolio! Explore my page for projects, designs, and more.">
+    <title>Kale Bebek's Portfolio</title>
     <title>Welcome to KB Nexus</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
