--- a/index.html
+++ b/index.html
@@ -3,79 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to Kale Bebek's Portfolio! Explore my page for projects, designs, and more.">
-    <title>Kale Bebek's Portfolio</title>
-    <title>Welcome to KB Nexus</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
 </head>
 <body>
     <!-- Navigation Bar -->
-    <header>
-        <nav class="navbar">
-            <div class="logo"><a href="#">KB Nexus</a></div>
+    <nav class="navbar">
+        <div class="container">
+            <a href="#" class="logo">MyWebsite</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="personal.html">Personal</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="hero">
-        <div class="hero-content">
-            <h1>Welcome to KB Nexus</h1>
-            <p>Your path to innovative solutions.</p>
-            <a href="#services" class="cta-btn">Explore Services</a>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="about">
+    <header class="hero">
         <div class="container">
-            <h2>About Us</h2>
-            <p>KB Nexus is dedicated to providing top-notch solutions tailored to your needs. We strive to innovate and make a difference in everything we do.</p>
+            <h1>Welcome to My Website</h1>
+            <p>Your go-to place for amazing content and services.</p>
+            <a href="#" class="btn">Learn More</a>
         </div>
-    </section>
+    </header>
 
-    <!-- Services Section -->
-    <section id="services" class="services">
+    <!-- Footer -->
+    <footer class="footer">
         <div class="container">
-            <h2>Our Services</h2>
-            <div class="service-item">
-                <h3>Web Development</h3>
-                <p>We create responsive, user-friendly websites that help your business grow.</p>
-            </div>
-            <div class="service-item">
-                <h3>Consulting</h3>
-                <p>Our experts provide guidance to help you navigate complex challenges and achieve success.</p>
-            </div>
-            <div class="service-item">
-                <h3>Digital Marketing</h3>
-                <p>We craft personalized marketing strategies to help you connect with your audience effectively.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Form Section -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <form action="#" method="post">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer Section -->
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 KB Nexus | <a href="https://www.instagram.com">Instagram</a> | <a href="https://www.linkedin.com">LinkedIn</a></p>
+            <p>&copy; 2023 MyWebsite. All rights reserved.</p>
         </div>
     </footer>
 </body>
