--- a/personal.html
+++ b/personal.html
@@ -8,12 +8,17 @@
 </head>
 <body>
     <!-- Navigation Bar -->
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="personal.html">Personal</a>
-        <a href="contact.html">Contact</a>
+    <nav class="navbar">
+        <div class="container">
+            <a href="#" class="logo">MyWebsite</a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="personal.html">Personal</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
     </nav>
-
     <!-- Login Form -->
     <div id="login-form">
         <h2>Login</h2>
