--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">MyWebsite</a>
+            <a href="#" class="logo">
+                <img src="Logo.png" alt="Logo">
+            </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
