--- a/personal.html
+++ b/personal.html
@@ -10,7 +10,11 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
-            <a href="#" class="logo">MyWebsite</a>
+            <!-- Logo on the left -->
+            <a href="#" class="logo">
+                <img src="images/logo.png" alt="Logo">
+            </a>
+            <!-- Navigation links on the right -->
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
@@ -19,22 +23,24 @@
             </ul>
         </div>
     </nav>
+
     <!-- Login Form -->
-    <div id="login-form">
-        <h2>Login</h2>
-        <input type="password" id="password" placeholder="Password" required>
-        <button onclick="login()">Login</button>
+    <div class="login-container">
+        <div id="login-form">
+            <h2>Login</h2>
+            <input type="password" id="password" placeholder="Enter Password" required>
+            <button onclick="login()" class="btn">Login</button>
+        </div>
     </div>
 
     <!-- Protected Content (Hidden until login) -->
-    <div id="protected-content" style="display: none;">
+    <div id="protected-content" class="protected-container" style="display: none;">
         <h2>Welcome to the Personal Page</h2>
         <p>This content is only visible to logged-in users.</p>
-        <button onclick="logout()" id="logout-btn" style="display: none;">Logout</button>
+        <button onclick="logout()" class="btn" id="logout-btn" style="display: none;">Logout</button>
     </div>
 
     <!-- Firebase Authentication Logic -->
     <script type="module" src="firebase.js"></script>
-
 </body>
 </html>
