--- a/personal.html
+++ b/personal.html
@@ -12,7 +12,7 @@
         <div class="container">
             <!-- Logo on the left -->
             <a href="#" class="logo">
-                <img src="images/logo.png" alt="Logo">
+                <img src="logo.png" alt="Logo">
             </a>
             <!-- Navigation links on the right -->
             <ul class="nav-links">
