--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="#" class="logo">
-                <img src="images\notext-logo.png" alt="Logo">
+                <img src="images\small-logo.png" alt="Logo">
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
