--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="hero">
         <div class="container">
             <h1>Welcome to My Website</h1>
-            <p>Your go-to place for amazing content and services.</p>
+            <p>It is still a work in progress.</p>
             <a href="#" class="btn">Learn More</a>
         </div>
     </header>
@@ -34,7 +34,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2023 MyWebsite. All rights reserved.</p>
+            <p>&copy; 2025 MyWebsite. All rights reserved.</p>
         </div>
     </footer>
 </body>
