--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KB Nexus | Creative Portfolio of Kale Bebek</title>
+    <meta name="description" content="KB Nexus is the creative portfolio of Kale Bebek, showcasing a blend of projects, game development, and design work.">
     <title>My Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,9 +17,9 @@
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="personal.html">Personal</a></li>
+                <li><a href="#">Projects</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="personal.html">Personal</a></li>
             </ul>
         </div>
     </nav>
@@ -34,7 +36,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 MyWebsite. All rights reserved.</p>
+            <p>&copy; 2025 Kale Bebek All rights reserved.</p>
         </div>
     </footer>
 </body>
