--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KB Nexus | Creative Portfolio of Kale Bebek</title>
     <meta name="description" content="KB Nexus is the creative portfolio of Kale Bebek, showcasing a blend of projects, game development, and design work.">
-    <title>My Website</title>
+    <link rel="icon" href="images/small-logo-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="#" class="logo">
-                <img src="images\small-logo.png" alt="Logo">
+                <img src="images/small-logo.png" alt="Logo">
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
