--- a/personal.html
+++ b/personal.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Page</title>
+    <title>KB Nexus | Personal Page</title>
+    <link rel="icon" href="images/small-logo-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
