--- a/personal.html
+++ b/personal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KB Nexus | Personal Page</title>
-    <link rel="icon" href="images/small-logo-32x32.png" type="image/x-icon">
+    <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
     <nav class="navbar">
         <div class="container">
             <!-- Logo on the left -->
-            <a href="#" class="logo">
-                <img src="images/small-logo.png" alt="Logo">
+            <a href="index.html" class="logo">
+                <img src="favicon/android-chrome-192x192.png" alt="Logo">
             </a>
             <!-- Navigation links on the right -->
             <ul class="nav-links">
