--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- Test Comment-->
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
