updated css and html for home page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
             </ul>
         </div>
     </nav>
+    <!-- About section -->
+    <section class="home-container">
+        <div class="left-section">
+            <img src="favicon/android-chrome-192x192.png" alt="Kale Bebek" class="profile-pic">
+            <div class="social-links">
+                <a href="#" target="_blank">Twitter</a>
+                <a href="#" target="_blank">LinkedIn</a>
+                <a href="#" target="_blank">GitHub</a>
+            </div>
+        </div>
+        <div class="right-section">
+            <h1>Welcome to KB Nexus</h1>
+            <p>Hi, I'm Kale Bebek, a passionate developer and creator. Explore my projects and journey as I build innovative solutions and share my experiences.</p>
+        </div>
+    </section>
 
     <!-- Hero Section -->
     <header class="hero">
