--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="left-section">
             <img src="favicon/android-chrome-192x192.png" alt="Kale Bebek" class="profile-pic">
             <div class="social-links">
-                <a href="#" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
-                <a href="#" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="#" target="_blank"><img src="github-icon.png" alt="GitHub"></a>
+                <a href="https://www.instagram.com/kale_bebek/" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.linkedin.com/in/kalebebek/" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="https://github.com/KaleBebek" target="_blank"><img src="github-icon.png" alt="GitHub"></a>
             </div>
         </div>
         <div class="right-section">
