--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <a href="https://github.com/KaleBebek" target="_blank"><img src="images/github-icon.png" alt="GitHub"></a>
             </div>
         </div>
+        <div class="vertical-line"></div>
         <div class="right-section">
             <h1>Welcome to KB Nexus</h1>
             <p>Hi, I'm Kale Bebek, a passionate developer and creator. Explore my projects and journey as I build innovative solutions and share my experiences.</p>
