--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </div>
     </nav>
     <!-- About section -->
-    <section class="home-container">
+    <section class="container">
         <div class="left-section">
             <img src="favicon/android-chrome-192x192.png" alt="Kale Bebek" class="profile-pic">
             <div class="social-links">
-                <a href="https://www.instagram.com/kale_bebek/" target="_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/kale_bebek/" target="_blank"><img src="images/Instagram-icon.png" alt="Instagram"></a>
                 <a href="https://www.linkedin.com/in/kalebebek/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://github.com/KaleBebek" target="_blank"><img src="images/github-icon.png" alt="GitHub"></a>
             </div>
