--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <!-- About section -->
-    <section class="container">
+    <section class="home-container">
         <div class="left-section">
             <img src="favicon/android-chrome-192x192.png" alt="Kale Bebek" class="profile-pic">
             <div class="social-links">
@@ -33,6 +33,10 @@
                 <a href="https://www.linkedin.com/in/kalebebek/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://github.com/KaleBebek" target="_blank"><img src="images/github-icon.png" alt="GitHub"></a>
             </div>
+        </div>
+        <div class="left-text">
+            <h1>Kale Bebek</h1>
+            <p>degree</p>
         </div>
         <div class="vertical-line"></div>
         <div class="right-section">
