--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <a href="https://github.com/KaleBebek" target="_blank"><img src="images/github-icon.png" alt="GitHub"></a>
             </div>
         </div>
-        <div class="left-text">
-            <h1>Kale Bebek</h1>
-            <p>degree</p>
+        <div class="middle-section">
+            <h2>Kale Bebek</h2>
+            <p>Computer Science Graduate | Developer | Innovator</p>
         </div>
         <div class="vertical-line"></div>
         <div class="right-section">
