added css to bg

--- a/index.html
+++ b/index.html
@@ -24,27 +24,29 @@
             </ul>
         </div>
     </nav>
-    <!-- About section -->
-    <section class="home-container">
-        <div class="left-section">
-            <img src="favicon/android-chrome-192x192.png" alt="Kale Bebek" class="profile-pic">
-            <div class="social-links">
-                <a href="https://www.instagram.com/kale_bebek/" target="_blank"><img src="images/Instagram-icon.png" alt="Instagram"></a>
-                <a href="https://www.linkedin.com/in/kalebebek/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://github.com/KaleBebek" target="_blank"><img src="images/github-icon.png" alt="GitHub"></a>
+    <!-- home section -->
+     <div class="main-container">
+        <section class="home-container">
+            <div class="left-section">
+                <img src="favicon/android-chrome-192x192.png" alt="Kale Bebek" class="profile-pic">
+                <div class="social-links">
+                    <a href="https://www.instagram.com/kale_bebek/" target="_blank"><img src="images/Instagram-icon.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/in/kalebebek/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
+                    <a href="https://github.com/KaleBebek" target="_blank"><img src="images/github-icon.png" alt="GitHub"></a>
+                </div>
             </div>
-        </div>
-        <div class="middle-section">
-            <h2>Kale Bebek</h2>
-            <p>Computer Science Graduate | Developer | Innovator</p>
-        </div>
-        <div class="vertical-line"></div>
-        <div class="right-section">
-            <h1>Welcome to KB Nexus</h1>
-            <p>Hi, I'm Kale Bebek, a passionate developer and creator. Explore my projects and journey as I build innovative solutions and share my experiences.</p>
-        </div>
-    </section>
-
+            <div class="middle-section">
+                <h2>Kale Bebek</h2>
+                <p>Computer Science Graduate | Developer | Innovator</p>
+            </div>
+            <div class="vertical-line"></div>
+            <div class="right-section">
+                <h1>Welcome to KB Nexus</h1>
+                <p>Hi, I'm Kale Bebek, a passionate developer and creator. Explore my projects and journey as I build innovative solutions and share my experiences.</p>
+            </div>
+        </section>
+    </div>
+    
     <!-- Hero Section -->
     <header class="hero">
         <div class="container">
