--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             </div>
             <div class="vertical-line"></div>
             <div class="right-section">
-                <h1>Welcome to KB Nexus</h1>
+                <h1>About Me</h1>
                 <p>Hi, I'm Kale Bebek, a passionate developer and creator. Explore my projects and journey as I build innovative solutions and share my experiences.</p>
             </div>
         </section>
     </div>
-    
+
     <!-- Hero Section -->
     <header class="hero">
         <div class="container">
