--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="middle-section">
                 <h2>Kale Bebek</h2>
-                <p>Computer Science Graduate | Developer | Innovator</p>
+                <p>Bachelor of Computer Science (BSc)</p>
             </div>
             <div class="vertical-line"></div>
             <div class="right-section">
