--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="middle-section">
                 <h2>Kale Bebek</h2>
                 <p>Bachelor of Computer Science (BSc)</p>
+                <p>Developer | Innovator</p>
             </div>
             <div class="vertical-line"></div>
             <div class="right-section">
