--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="container">
+        <div class="nav-container">
             <a href="index.html" class="logo">
                 <img src="favicon/android-chrome-192x192.png" alt="Logo">
             </a>
