--- a/personal.html
+++ b/personal.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="container">
+        <div class="nav-container">
             <!-- Logo on the left -->
             <a href="index.html" class="logo">
                 <img src="favicon/android-chrome-192x192.png" alt="Logo">
