added better quality headshot

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <div class="main-container">
         <section class="home-container">
             <div class="left-section">
-                <img src="images/headshot.png" alt="Kale Bebek" class="profile-pic">
+                <img src="images/headshot.jpg" alt="Kale Bebek" class="profile-pic">
                 <div class="social-links">
                     <a href="https://www.instagram.com/kale_bebek/" target="_blank"><img src="images/Instagram-icon.png" alt="Instagram"></a>
                     <a href="https://www.linkedin.com/in/kalebebek/" target="_blank"><img src="images/linkedin-icon.png" alt="LinkedIn"></a>
