added stuff to personal

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </ul>
         </div>
     </nav>
-    <!-- home section -->
-     <div class="main-container">
+    <!-- main section -->
+    <div class="main-container">
         <section class="home-container">
             <div class="left-section">
                 <img src="images/headshot.jpg" alt="Kale Bebek" class="profile-pic">
