--- a/personal.html
+++ b/personal.html
@@ -36,8 +36,21 @@
 
     <!-- Protected Content (Hidden until login) -->
     <div id="protected-content" class="protected-container" style="display: none;">
-        <h2>Welcome to the Personal Page</h2>
-        <p>This content is only visible to logged-in users.</p>
+        <div class="main-container">
+            <section class="home-container">
+                <h1>Stuff will go here eventually</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna 
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
+                    cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                    anim id est laborum.
+                </p>
+            </section>
+        </div>
         <button onclick="logout()" class="btn" id="logout-btn" style="display: none;">Logout</button>
     </div>
 
